10-Deployment-Strategies/manifests/canary_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-canary
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: nginx-canary
        image: nginx:1.23.3
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
